fixed modal element delete z-index issue

--- a/src/index.scss
+++ b/src/index.scss
@@ -36,3 +36,7 @@ body {
 .react-daterange-picker__wrapper {
     border: 0px !important;
 }
+
+.swal2-container {
+    z-index: 900000;
+}
